Complete Java backend migration and ECP integration